# FastAI

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
src/: api_model.py  main.py  schemas.py  settings.py
src/schemas/: sites.py  users.py
src/sites/: __init__.py  base.py  create.py  generate.py  my.py  router.py  schemas.py  site.py
src/users/: __init__.py  me.py  router.py  schemas.py
