[project]
name = "fastai-kruser"
version = "0.0.1"
description = "FastAI test project."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "editorconfig-checker==3.2.1",
    "email-validator>=2.2.0",
    "fastapi[standard]==0.115.12",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.11.0",
    "ruff==0.11.13",
]
